cmake_minimum_required(VERSION 3.4.1)

get_filename_component(SHADERC_SRC
                       ${ANDROID_NDK}/sources/third_party/shaderc
                       ABSOLUTE)
set(GLSLANG_SPIRV_INCLUDE_DIR ${SHADERC_SRC}/third_party/glslang)
add_library(shaderc_lib STATIC IMPORTED)
set_target_properties(shaderc_lib PROPERTIES IMPORTED_LOCATION
                      ${SHADERC_SRC}/libs/${ANDROID_STL}/${ANDROID_ABI}/libshaderc.a)

get_filename_component(VIRY3D_LIB_SRC_DIR
                       ${CMAKE_SOURCE_DIR}/../../../lib/src
                       ABSOLUTE)

get_filename_component(VIRY3D_APP_SRC_DIR
                       ${CMAKE_SOURCE_DIR}/../../../app/src
                       ABSOLUTE)

set(CMAKE_C_FLAGS
    "${CMAKE_C_FLAGS} -Wall -DVR_ANDROID -DVR_GLES=1 -DVR_VULKAN=0 -DVK_USE_PLATFORM_ANDROID_KHR -DFT2_BUILD_LIBRARY -DIOAPI_NO_64 -DAL_LIBTYPE_STATIC -DAL_ALEXT_PROTOTYPES -DHAVE_GCC_DESTRUCTOR -DFPM_DEFAULT")

set(CMAKE_CXX_FLAGS
    "${CMAKE_CXX_FLAGS} -std=c++11 -fexceptions -frtti -Wall -DVR_ANDROID -DVR_GLES=1 -DVR_VULKAN=0 -DVK_USE_PLATFORM_ANDROID_KHR -DFT2_BUILD_LIBRARY -DIOAPI_NO_64 -DAL_LIBTYPE_STATIC -DAL_ALEXT_PROTOTYPES -DHAVE_GCC_DESTRUCTOR -DFPM_DEFAULT")

set(CMAKE_SHARED_LINKER_FLAGS
    "${CMAKE_SHARED_LINKER_FLAGS} -u ANativeActivity_onCreate")

add_library(Viry3DDep STATIC
            ${VIRY3D_LIB_SRC_DIR}/crypto/md5/md5.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/autofit/autofit.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftbase.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftbbox.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftbitmap.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftdebug.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftfntfmt.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftfstype.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftgasp.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftglyph.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftgxval.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftinit.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftlcdfil.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftmm.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftotval.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftpatent.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftpfr.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftstroke.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftsynth.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftsystem.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/fttype1.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/base/ftwinfnt.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/bdf/bdf.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/cache/ftcache.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/cff/cff.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/cid/type1cid.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/gzip/ftgzip.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/lzw/ftlzw.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/pcf/pcf.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/pfr/pfr.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/psaux/psaux.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/pshinter/pshinter.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/psnames/psmodule.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/raster/raster.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/sfnt/sfnt.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/smooth/smooth.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/truetype/truetype.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/type1/type1.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/type42/type42.c
            ${VIRY3D_LIB_SRC_DIR}/freetype/src/winfonts/winfnt.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jaricom.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jcapimin.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jcapistd.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jcarith.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jccoefct.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jccolor.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jcdctmgr.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jchuff.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jcinit.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jcmainct.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jcmarker.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jcmaster.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jcomapi.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jcparam.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jcprepct.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jcsample.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jctrans.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdapimin.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdapistd.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdarith.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdatadst.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdatasrc.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdcoefct.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdcolor.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jddctmgr.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdhuff.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdinput.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdmainct.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdmarker.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdmaster.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdmerge.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdpostct.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdsample.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jdtrans.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jerror.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jfdctflt.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jfdctfst.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jfdctint.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jidctflt.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jidctfst.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jidctint.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jmemmgr.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jmemnobs.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jquant1.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jquant2.c
            ${VIRY3D_LIB_SRC_DIR}/jpeg/jutils.c
            ${VIRY3D_LIB_SRC_DIR}/json/json_reader.cpp
            ${VIRY3D_LIB_SRC_DIR}/json/json_value.cpp
            ${VIRY3D_LIB_SRC_DIR}/json/json_writer.cpp
            ${VIRY3D_LIB_SRC_DIR}/lua/lapi.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lauxlib.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lbaselib.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lbitlib.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lcode.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lcorolib.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lctype.c
            ${VIRY3D_LIB_SRC_DIR}/lua/ldblib.c
            ${VIRY3D_LIB_SRC_DIR}/lua/ldebug.c
            ${VIRY3D_LIB_SRC_DIR}/lua/ldo.c
            ${VIRY3D_LIB_SRC_DIR}/lua/ldump.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lfunc.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lgc.c
            ${VIRY3D_LIB_SRC_DIR}/lua/linit.c
            ${VIRY3D_LIB_SRC_DIR}/lua/liolib.c
            ${VIRY3D_LIB_SRC_DIR}/lua/llex.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lmathlib.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lmem.c
            ${VIRY3D_LIB_SRC_DIR}/lua/loadlib.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lobject.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lopcodes.c
            ${VIRY3D_LIB_SRC_DIR}/lua/loslib.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lparser.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lstate.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lstring.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lstrlib.c
            ${VIRY3D_LIB_SRC_DIR}/lua/ltable.c
            ${VIRY3D_LIB_SRC_DIR}/lua/ltablib.c
            ${VIRY3D_LIB_SRC_DIR}/lua/ltm.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lundump.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lutf8lib.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lvm.c
            ${VIRY3D_LIB_SRC_DIR}/lua/lzio.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/bit.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/decoder.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/fixed.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/frame.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/huffman.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/compat.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/crc.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/field.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/frametype.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/genre.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/id3_debug.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/id3_file.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/id3_frame.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/id3_version.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/latin1.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/parse.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/render.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/tag.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/ucs4.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/utf8.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/utf16.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/id3tag/util.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/layer3.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/layer12.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/mad_stream.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/mad_timer.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/synth.c
            ${VIRY3D_LIB_SRC_DIR}/mp3/mad/version.c
            ${VIRY3D_LIB_SRC_DIR}/noise/model/cylinder.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/model/line.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/model/plane.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/model/sphere.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/abs.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/add.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/billow.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/blend.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/cache.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/checkerboard.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/clamp.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/const.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/curve.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/cylinders.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/displace.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/exponent.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/invert.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/max.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/min.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/modulebase.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/multiply.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/perlin.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/power.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/ridgedmulti.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/rotatepoint.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/scalebias.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/scalepoint.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/select.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/spheres.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/terrace.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/translatepoint.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/turbulence.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/module/voronoi.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/latlon.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/noisegen.cpp
            ${VIRY3D_LIB_SRC_DIR}/noise/noiseutils.cpp
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/backends/loopback.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/backends/null.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/backends/opensl.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/backends/thread_msg_queue_cpp11.cpp
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/Alc.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/Alc_cpp11.cpp
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/alcConfig.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/alcDedicated.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/alcEcho.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/alcModulator.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/alcReverb.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/alcRing.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/alcThread.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/Alu.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/bs2b.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/helpers.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/hrtf.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/mixer.c
            ${VIRY3D_LIB_SRC_DIR}/openal/Alc/panning.c
            ${VIRY3D_LIB_SRC_DIR}/openal/OpenAL32/alError.c
            ${VIRY3D_LIB_SRC_DIR}/openal/OpenAL32/alExtension.c
            ${VIRY3D_LIB_SRC_DIR}/openal/OpenAL32/alListener.c
            ${VIRY3D_LIB_SRC_DIR}/openal/OpenAL32/alSource.c
            ${VIRY3D_LIB_SRC_DIR}/openal/OpenAL32/alThunk.c
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/BroadphaseCollision/btCollisionAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/BroadphaseCollision/btDbvt.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/BroadphaseCollision/btDbvtBroadphase.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/BroadphaseCollision/btDispatcher.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/BroadphaseCollision/btMultiSapBroadphase.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/BroadphaseCollision/btOverlappingPairCache.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/BroadphaseCollision/btQuantizedBvh.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/BroadphaseCollision/btSimpleBroadphase.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btActivatingCollisionAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btBox2dBox2dCollisionAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btBoxBoxCollisionAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btBoxBoxDetector.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btCollisionWorldImporter.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btCompoundCollisionAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btCompoundCompoundCollisionAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btConvex2dConvex2dAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btConvexConcaveCollisionAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btConvexPlaneCollisionAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btDefaultCollisionConfiguration.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btEmptyCollisionAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btGhostObject.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btHashedSimplePairCache.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btInternalEdgeUtility.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btManifoldResult.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btSimulationIslandManager.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btSphereBoxCollisionAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btSphereSphereCollisionAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btSphereTriangleCollisionAlgorithm.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/btUnionFind.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionDispatch/SphereTriangleDetector.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btBox2dShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btBoxShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btCollisionShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btCompoundShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btConcaveShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btConeShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btConvex2dShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btConvexHullShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btConvexInternalShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btConvexPointCloudShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btConvexPolyhedron.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btConvexShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btConvexTriangleMeshShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btCylinderShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btEmptyShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btHeightfieldTerrainShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btMinkowskiSumShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btMultimaterialTriangleMeshShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btMultiSphereShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btOptimizedBvh.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btPolyhedralConvexShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btScaledBvhTriangleMeshShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btShapeHull.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btSphereShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btStaticPlaneShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btStridingMeshInterface.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btTriangleBuffer.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btTriangleCallback.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btTriangleIndexVertexArray.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btTriangleIndexVertexMaterialArray.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btTriangleMesh.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btTriangleMeshShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/CollisionShapes/btUniformScalingShape.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/NarrowPhaseCollision/btContinuousConvexCollision.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/NarrowPhaseCollision/btConvexCast.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/NarrowPhaseCollision/btGjkConvexCast.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/NarrowPhaseCollision/btGjkEpaPenetrationDepthSolver.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/NarrowPhaseCollision/btMinkowskiPenetrationDepthSolver.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/NarrowPhaseCollision/btPolyhedralContactClipping.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/NarrowPhaseCollision/btRaycastCallback.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/NarrowPhaseCollision/btSubSimplexConvexCast.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/Character/btKinematicCharacterController.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btConeTwistConstraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btContactConstraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btFixedConstraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btGearConstraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btGeneric6DofConstraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btGeneric6DofSpring2Constraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btGeneric6DofSpringConstraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btHinge2Constraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btHingeConstraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btNNCGConstraintSolver.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btPoint2PointConstraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btSequentialImpulseConstraintSolver.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btSliderConstraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btSolve2LinearConstraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btTypedConstraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/ConstraintSolver/btUniversalConstraint.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/Dynamics/btRigidBody.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/BulletDynamics/Dynamics/btSimpleDynamicsWorld.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/LinearMath/btAlignedAllocator.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/LinearMath/btConvexHull.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/LinearMath/btConvexHullComputer.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/LinearMath/btGeometryUtil.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/LinearMath/btPolarDecomposition.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/LinearMath/btQuickprof.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/LinearMath/btSerializer.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src/LinearMath/btVector3.cpp
            ${VIRY3D_LIB_SRC_DIR}/png/png.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngerror.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngget.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngmem.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngpread.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngread.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngrio.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngrtran.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngrutil.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngset.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngtrans.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngwio.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngwrite.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngwtran.c
            ${VIRY3D_LIB_SRC_DIR}/png/pngwutil.c
            ${VIRY3D_LIB_SRC_DIR}/xml/tinyxml2.cpp
            ${VIRY3D_LIB_SRC_DIR}/zlib/ioapi.c
            ${VIRY3D_LIB_SRC_DIR}/zlib/unzip.c)

target_include_directories(Viry3DDep PRIVATE
                           ${VIRY3D_LIB_SRC_DIR}
                           ${VIRY3D_LIB_SRC_DIR}/freetype/include
                           ${VIRY3D_LIB_SRC_DIR}/mp3/mad
                           ${VIRY3D_LIB_SRC_DIR}/openal/include
                           ${VIRY3D_LIB_SRC_DIR}/openal/android
                           ${VIRY3D_LIB_SRC_DIR}/openal/OpenAL32/Include
                           ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src)

add_library(Viry3D STATIC
            ${VIRY3D_LIB_SRC_DIR}/android/DisplayAndroid.cpp
            ${VIRY3D_LIB_SRC_DIR}/animation/Animation.cpp
            ${VIRY3D_LIB_SRC_DIR}/animation/AnimationCurve.cpp
            ${VIRY3D_LIB_SRC_DIR}/audio/AudioClip.cpp
            ${VIRY3D_LIB_SRC_DIR}/audio/AudioListener.cpp
            ${VIRY3D_LIB_SRC_DIR}/audio/AudioManager.cpp
            ${VIRY3D_LIB_SRC_DIR}/audio/AudioSource.cpp
            ${VIRY3D_LIB_SRC_DIR}/Application.cpp
            ${VIRY3D_LIB_SRC_DIR}/Component.cpp
            ${VIRY3D_LIB_SRC_DIR}/Debug.cpp
            ${VIRY3D_LIB_SRC_DIR}/gles/BufferGLES.cpp
            ${VIRY3D_LIB_SRC_DIR}/gles/DisplayGLES.cpp
            ${VIRY3D_LIB_SRC_DIR}/gles/MaterialGLES.cpp
            ${VIRY3D_LIB_SRC_DIR}/gles/RenderPassGLES.cpp
            ${VIRY3D_LIB_SRC_DIR}/gles/ShaderGLES.cpp
            ${VIRY3D_LIB_SRC_DIR}/gles/TextureGLES.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/Camera.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/Color.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/Cubemap.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/DisplayBase.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/Graphics.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/Image.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/ImageBuffer.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/IndexBuffer.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/Light.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/LightmapSettings.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/Material.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/Mesh.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/RenderPass.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/RenderTexture.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/RenderTextureBliter.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/Screen.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/Shader.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/Texture2D.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/UniformBuffer.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/VertexBuffer.cpp
            ${VIRY3D_LIB_SRC_DIR}/graphics/XMLShader.cpp
            ${VIRY3D_LIB_SRC_DIR}/GameObject.cpp
            ${VIRY3D_LIB_SRC_DIR}/io/Directory.cpp
            ${VIRY3D_LIB_SRC_DIR}/io/File.cpp
            ${VIRY3D_LIB_SRC_DIR}/io/MemoryStream.cpp
            ${VIRY3D_LIB_SRC_DIR}/io/Stream.cpp
            ${VIRY3D_LIB_SRC_DIR}/Input.cpp
            ${VIRY3D_LIB_SRC_DIR}/math/Bounds.cpp
            ${VIRY3D_LIB_SRC_DIR}/math/Frustum.cpp
            ${VIRY3D_LIB_SRC_DIR}/math/Mathf.cpp
            ${VIRY3D_LIB_SRC_DIR}/math/Matrix4x4.cpp
            ${VIRY3D_LIB_SRC_DIR}/math/Quaternion.cpp
            ${VIRY3D_LIB_SRC_DIR}/math/Ray.cpp
            ${VIRY3D_LIB_SRC_DIR}/math/Rect.cpp
            ${VIRY3D_LIB_SRC_DIR}/math/Vector2.cpp
            ${VIRY3D_LIB_SRC_DIR}/math/Vector3.cpp
            ${VIRY3D_LIB_SRC_DIR}/memory/ByteBuffer.cpp
            ${VIRY3D_LIB_SRC_DIR}/Object.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/BoxCollider.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/Collider.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/MeshCollider.cpp
            ${VIRY3D_LIB_SRC_DIR}/physics/Physics.cpp
            ${VIRY3D_LIB_SRC_DIR}/postprocess/ImageEffect.cpp
            ${VIRY3D_LIB_SRC_DIR}/postprocess/ImageEffectBlur.cpp
            ${VIRY3D_LIB_SRC_DIR}/Profiler.cpp
            ${VIRY3D_LIB_SRC_DIR}/renderer/MeshRenderer.cpp
            ${VIRY3D_LIB_SRC_DIR}/renderer/ParticleSystem.cpp
            ${VIRY3D_LIB_SRC_DIR}/renderer/ParticleSystemRenderer.cpp
            ${VIRY3D_LIB_SRC_DIR}/renderer/Renderer.cpp
            ${VIRY3D_LIB_SRC_DIR}/renderer/SkinnedMeshRenderer.cpp
            ${VIRY3D_LIB_SRC_DIR}/renderer/Terrain.cpp
            ${VIRY3D_LIB_SRC_DIR}/Resource.cpp
            ${VIRY3D_LIB_SRC_DIR}/RunLoop.cpp
            ${VIRY3D_LIB_SRC_DIR}/string/String.cpp
            ${VIRY3D_LIB_SRC_DIR}/thread/Thread.cpp
            ${VIRY3D_LIB_SRC_DIR}/time/Time.cpp
            ${VIRY3D_LIB_SRC_DIR}/time/Timer.cpp
            ${VIRY3D_LIB_SRC_DIR}/tweener/Tweener.cpp
            ${VIRY3D_LIB_SRC_DIR}/tweener/TweenPosition.cpp
            ${VIRY3D_LIB_SRC_DIR}/tweener/TweenUIColor.cpp
            ${VIRY3D_LIB_SRC_DIR}/Transform.cpp
            ${VIRY3D_LIB_SRC_DIR}/ui/Atlas.cpp
            ${VIRY3D_LIB_SRC_DIR}/ui/Font.cpp
            ${VIRY3D_LIB_SRC_DIR}/ui/Sprite.cpp
            ${VIRY3D_LIB_SRC_DIR}/ui/UICanvasRenderer.cpp
            ${VIRY3D_LIB_SRC_DIR}/ui/UIEventHandler.cpp
            ${VIRY3D_LIB_SRC_DIR}/ui/UILabel.cpp
            ${VIRY3D_LIB_SRC_DIR}/ui/UIRect.cpp
            ${VIRY3D_LIB_SRC_DIR}/ui/UISprite.cpp
            ${VIRY3D_LIB_SRC_DIR}/ui/UIView.cpp
            ${VIRY3D_LIB_SRC_DIR}/vulkan/BufferVulkan.cpp
            ${VIRY3D_LIB_SRC_DIR}/vulkan/DisplayVulkan.cpp
            ${VIRY3D_LIB_SRC_DIR}/vulkan/MaterialVulkan.cpp
            ${VIRY3D_LIB_SRC_DIR}/vulkan/RenderPassVulkan.cpp
            ${VIRY3D_LIB_SRC_DIR}/vulkan/ShaderVulkan.cpp
            ${VIRY3D_LIB_SRC_DIR}/vulkan/TextureVulkan.cpp
            ${VIRY3D_LIB_SRC_DIR}/vulkan/vulkan_check.cpp
            ${VIRY3D_LIB_SRC_DIR}/vulkan/vulkan_proc_addr.cpp
            ${VIRY3D_LIB_SRC_DIR}/vulkan/vulkan_shader_compiler.cpp
            ${VIRY3D_LIB_SRC_DIR}/vulkan/vulkan_wrapper/vulkan_wrapper.cpp      # for libvulkan.so load
            ${VIRY3D_LIB_SRC_DIR}/World.cpp)

target_include_directories(Viry3D PRIVATE
                           ${VIRY3D_LIB_SRC_DIR}
                           ${VIRY3D_LIB_SRC_DIR}/freetype/include
                           ${VIRY3D_LIB_SRC_DIR}/mp3/mad
                           ${VIRY3D_LIB_SRC_DIR}/openal/include
                           ${VIRY3D_LIB_SRC_DIR}/openal/android
                           ${VIRY3D_LIB_SRC_DIR}/openal/OpenAL32/Include
                           ${VIRY3D_LIB_SRC_DIR}/physics/bullet/src
                           ${ANDROID_NDK}/sources/third_party/shaderc/include
                           ${SHADERC_SRC}/third_party/spirv-tools/include
                           ${SHADERC_SRC}/third_party/spirv-tools/include/spirv-tools)

add_library(Viry3DApp SHARED
            ${ANDROID_NDK}/sources/android/native_app_glue/android_native_app_glue.c
            ${CMAKE_SOURCE_DIR}/app/src/main/jni/jni.cpp
            ${VIRY3D_APP_SRC_DIR}/AppAnim.cpp
            ${VIRY3D_APP_SRC_DIR}/AppAR.cpp
            ${VIRY3D_APP_SRC_DIR}/AppBlur.cpp
            ${VIRY3D_APP_SRC_DIR}/AppClear.cpp
            ${VIRY3D_APP_SRC_DIR}/AppFlappyBird.cpp
            ${VIRY3D_APP_SRC_DIR}/AppGameDeveloper/CodeEditor.cpp
            ${VIRY3D_APP_SRC_DIR}/AppGameDeveloper/LuaRunner.cpp
            ${VIRY3D_APP_SRC_DIR}/AppGameDeveloper.cpp
            ${VIRY3D_APP_SRC_DIR}/AppMesh.cpp
            ${VIRY3D_APP_SRC_DIR}/AppParticle.cpp
            ${VIRY3D_APP_SRC_DIR}/AppPBR.cpp
            ${VIRY3D_APP_SRC_DIR}/AppPhysics.cpp
            ${VIRY3D_APP_SRC_DIR}/AppShadow.cpp
            ${VIRY3D_APP_SRC_DIR}/AppSky.cpp
            ${VIRY3D_APP_SRC_DIR}/AppTerrain.cpp
            ${VIRY3D_APP_SRC_DIR}/AppUI.cpp
            ${VIRY3D_APP_SRC_DIR}/AppWatch.cpp
            ${VIRY3D_APP_SRC_DIR}/DebugUI.cpp
            ${VIRY3D_APP_SRC_DIR}/LaunchScreen.cpp)

target_include_directories(Viry3DApp PRIVATE
                           ${ANDROID_NDK}/sources/android/native_app_glue
                           ${VIRY3D_LIB_SRC_DIR})

target_link_libraries(Viry3DApp
                      android log EGL GLESv3 z OpenSLES
                      Viry3D Viry3DDep
                      shaderc_lib       # for vulkan shader compile
                      )
